--- a/Day3/assignment3_switch.html
+++ b/Day3/assignment3_switch.html
@@ -12,7 +12,7 @@
     <script type = "text/javascript">
         let mark=prompt("Enter the marks of the student",'0 - 100');
         let a=mark/10;
-        let marks=Math.round(a);
+        let marks=Math.ceil(a);
         switch(marks)
         {
             case 10: console.log(`Marks: ${mark} Grade: O`); break;
