--- a/Day4/Assignment3.html
+++ b/Day4/Assignment3.html
@@ -9,7 +9,7 @@
 <body>
     <script type ="text/JavaScript">
         let ShoppingList=['Apple','Orange','Grapes','Lays'];
-        let ShoppingBasket=ShoppingList;
+        let ShoppingBasket=...ShoppingList;
         let n=prompt("Enter the number of items to be added:",'INTEGER VALUE');
         for(let i=0;i<n;i++)
         {
